# fledger

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
assessments/project/: evidence.json  overview_project_matrix.md  overview_skills_and_project_matrix.md
assessments/user/: evidence.json  overview_skills_and_project_matrix.md
docs/: BetaTesters.md
docs/advice/: SECURITY_CATEGORY.md
examples/ML/: Example_CatDog_CN_release_Note.md  Example_CatDog_CN_release_Note.txt  Example_CatDog_OD_Release_Note.md  Example_CatDog_OD_Release_Note.txt  Example_Release_Note.md  Example_Release_Note.txt
rubric/general/: README_file_check.json
src/: README.md
src/assessments/project/: evidence.json
src/assessments/user/: evidence.json  overview_skills_and_project_matrix.md
src/cli/: helpers.py  main.py
src/cli/templates/: job_matrix_overview.md  project_matrix_overview.md  skill_matrix_overview.md
src/tests/: test_cli_commands.py
src/tests/data/: OpenSSF_Standards_Passing.json  TwilioAITrust.json  openssf_example.json
standards/: SecurityCategory.json
tests/data/: OpenSSF_Standards_Passing.json  TwilioAITrust.json  openssf_example.json
